[gd_scene load_steps=2 format=3 uid="uid://dy5a80ny2p05l"]

[ext_resource type="Script" path="res://gui/task_tracking/checkbox_profile.gd" id="1_8egkx"]

[node name="ProfilePanelContainer" type="PanelContainer"]
mouse_filter = 2
script = ExtResource("1_8egkx")

[node name="ProfileButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
mouse_filter = 2

[node name="ProfileColorRect" type="ColorRect" parent="Margin/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
color = Color(0.611765, 0.470588, 0.137255, 1)

[node name="ProfileLabel" type="Label" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Default 1"
horizontal_alignment = 1
